# Shanyraq_API

./: Dockerfile  README.md  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 685afed8016f_new_alembic.py  ccef830bac1f_new_migration.py
app/: announcement_repository.py  comments_repository.py  database.py  favourites_repository.py  main.py  users_repository.py
schemas/: AnnounceModels.py  CommentModel.py  UsersModel.py
scripts/: launch.sh
